ovirt-engine-kerbldap-migration -- ovirt-engine legacy kerbldap migration tools

????-??-?? - Version 1.0.2

2015-05-31 - Version 1.0.1

 * tool: don't log sensitive informations
 * utils: several ldapservers are divided by semicolon
 * doc: consistent CA certificate file
 * doc: update active directory CA instructions

2015-03-17 - Version 1.0.0

Alon Bar-Lev <alonbl@redhat.com>
Ondra Machacek <omachace@redhat.com>

 * Initial implementation.