@@ -2,6 +2,10 @@ ovirt-engine-kerbldap-migration -- ovirt-engine legacy kerbldap migration tools
 
 ????-??-?? - Version 1.0.2
 
+ * tool: add protocol support
+ * utils: use dig to resolve SRV records
+ * tool: add support to choose secure mode
+
 2015-05-31 - Version 1.0.1
 
  * tool: don't log sensitive informations
